reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__scheduler.rs_line_1633_col_9.log

*** crates/tracewake-core/src/scheduler.rs:1633:9: replace no_human::append_and_apply_agent_event -> EventEnvelope with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/scheduler.rs
+++ replace no_human::append_and_apply_agent_event -> EventEnvelope with Default::default()
@@ -1625,19 +1625,17 @@
         events
     }
 
     fn append_and_apply_agent_event(
         log: &mut EventLog,
         agent_state: &mut AgentState,
         event: EventEnvelope,
     ) -> EventEnvelope {
-        let appended = log.append(event).expect("agent event is appendable");
-        apply_agent_event(agent_state, &appended).expect("agent event applies to live state");
-        appended
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     fn try_append_and_apply_agent_event(
         log: &mut EventLog,
         agent_state: &mut AgentState,
         event: EventEnvelope,
         scheduler_errors: &mut Vec<NoHumanSchedulerError>,
     ) -> Result<EventEnvelope, ()> {


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/scheduler.rs` has changed (1781905334.359925200s, 3s after last build at 1781905331.459925165s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
    --> crates/tracewake-core/src/scheduler.rs:1633:9
     |
1633 |         Default::default() /* ~ changed by cargo-mutants ~ */
     |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `EventEnvelope`
    --> crates/tracewake-core/src/events/envelope.rs:717:1
     |
 717 | pub struct EventEnvelope {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
    --> crates/tracewake-core/src/scheduler.rs:1633:9
     |
1633 |         Default::default() /* ~ changed by cargo-mutants ~ */
     |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
    --> crates/tracewake-core/src/events/envelope.rs:717:1
     |
 717 | pub struct EventEnvelope {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
